# donuts

./: CHANGELOG.md  LICENSE  README.md  donuts.cabal  monad-sugar.cabal  plans.md
.github/workflows/: haskell-ci.yml
app/: Main.hs  graph-inp
src/: Donuts.hs
src/Donuts/: Api.hs  Plugin.hs
src/Donuts/Internal/: Api.hs  GhcFacade.hs
src/Donuts/Internal/Plugin/: Env.hs  Renamer.hs  StmtTransformer.hs  Util.hs
src/Sugar/: Api.hs  Plugin.hs
src/Sugar/Internal/: GhcFacade.hs
src/Sugar/Internal/Plugin/: Renamer.hs
test/: Main.hs
