cabal-version:      3.0
name:               donuts
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Donuts, Donuts.Plugin,
                      Donuts.Api,
                      Donuts.Internal.Api
    other-modules: Donuts.Internal.GhcFacade
                   Donuts.Internal.Plugin.Renamer
                   Donuts.Internal.Plugin.Env
                   Donuts.Internal.Plugin.StmtTransformer
                   Donuts.Internal.Plugin.Util
    default-extensions:
      LambdaCase
    build-depends:    base ^>=4.19.0.0,
                      ghc ^>= 9.8.0,
                      ghc-boot,
                      transformers,
                      mtl,
    hs-source-dirs:   src
    default-language: GHC2021

test-suite donuts-test
    import:           warnings
    default-language: GHC2021
    ghc-options: -fplugin Donuts.Plugin
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        donuts,
        tasty,
        tasty-hunit,
        mtl

executable play
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        donuts,
        mtl,
        containers,
        transformers,
        vector

    hs-source-dirs:   app
    default-language: GHC2021
