cabal-version:      3.0
name:               donuts
version:            0.1.0.0
synopsis: Local imperativity GHC plugin
description: A GHC plugin that implements local imperativity within do-blocks ala Lean 4.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  README.md
tested-with:
  GHC == 9.10.1
  GHC == 9.8.1
  GHC == 9.6.2
  GHC == 9.4.8
source-repository head
    type: git
    location: https://github.com/aaronallen8455/donuts

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Donuts, Donuts.Plugin,
                      Donuts.Api,
                      Donuts.Internal.Api
    other-modules: Donuts.Internal.GhcFacade
                   Donuts.Internal.Plugin.Renamer
                   Donuts.Internal.Plugin.Env
                   Donuts.Internal.Plugin.StmtTransformer
                   Donuts.Internal.Plugin.Util
    default-extensions:
      LambdaCase
    build-depends:    base ^>=4.20.0.0 || ^>=4.19.0.0 || ^>= 4.18.0.0 || ^>= 4.17.0.0,
                      ghc ^>= 9.10.0 || ^>= 9.8.0 || ^>= 9.6.0 || ^>= 9.4.0,
                      ghc-boot,
                      transformers,
                      mtl,
    hs-source-dirs:   src
    default-language: GHC2021

test-suite donuts-test
    import:           warnings
    default-language: GHC2021
    ghc-options: -fplugin Donuts
                 -Wno-unused-matches
                 -Wno-unused-do-bind
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        donuts,
        tasty,
        tasty-hunit,
        mtl
