cabal-version:      3.0
name:               monad-sugar
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Sugar.Plugin,
                      Sugar.Api
    other-modules: Sugar.Internal.GhcFacade
                   Sugar.Internal.Plugin.Renamer
    default-extensions:
      LambdaCase
    build-depends:    base ^>=4.19.0.0,
                      ghc ^>= 9.8.0,
                      transformers,
                      mtl,
    hs-source-dirs:   src
    default-language: GHC2021

executable play
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        monad-sugar

    hs-source-dirs:   app
    default-language: GHC2021

test-suite monad-sugar-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        monad-sugar
